syntax = "proto3";

option csharp_namespace = "FileStorage.Protos";

package FileStorage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service FileStorageService {

  rpc UploadFile (stream UploadFileRequest) returns (FileUploadResponse);
  rpc DownloadFile (FileRequest) returns (stream FileDownloadResponse);
  rpc GetFileMetadata (FileRequest) returns (FileMetadataResponse);
  rpc GetAllFiles (google.protobuf.Empty) returns (FileListResponse);
  rpc DeleteFile (FileRequest) returns (DeleteResponse);
  rpc GetPresignedUrl (FileRequest) returns (UrlResponse);
}

enum FileType {
  PDF = 0;
  TEXT = 10;
  EXCEL = 20;
}

message UploadFileRequest {
  oneof data {
    FileUploadMetadata metadata = 1;
    bytes chunk_data = 2;
  }
}

message FileUploadMetadata {
  string file_name = 1;
  string content_type = 2;
  string file_path = 3;
}

message FileDownloadResponse {
  oneof data {
    FileDownloadMetadata metadata = 1;
    bytes chunk_data = 2;
  }
}

message FileDownloadMetadata {
  string file_name = 1;
  FileType file_type = 2;
}

message FileRequest {
  string id = 1;
}

message FileUploadResponse {
  string id = 1;
  FileType file_type = 2;
  string file_name = 3;
  string file_path = 4;
  google.protobuf.Timestamp created_at = 5;
}

message FileMetadataResponse {
  string id = 1;
  FileType file_type = 2;
  string file_name = 3;
  string file_path = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message FileListResponse {
  repeated FileMetadataResponse files = 1;
}

message DeleteResponse {
  bool success = 1;
}

message UrlResponse {
  FileType file_type = 1;
  string url = 2;
}